5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1596_1015.log
== TEST (2019-04-01 23:11:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
min(x,y,z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:13:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input("Digite o valor 1"))
y=int(input("digite o valor 2"))
z=int(input("digite o valor 3"))
min(x,y,z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '700.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:13:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input("Digite o valor 1"))
y=int(input("digite o valor 2"))
z=int(input("digite o valor 3"))
min(x,y,z)
-- EXECUTION TIME:
0.160597
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:13:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
max(x,y,z)
-- EXECUTION TIME:
0.158028
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:20:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
min(x)
y=(x+y+z)-(x+z)
max(z)
-- EXECUTION TIME:
0.14168
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 7, in <module>
    min(x)
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:20:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
min(x)
y=(x+y+z)-(x+z)
max(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    min(x)
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 23:30:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z)
c=(x+y+z)-(x+z)
b=max(x,y,z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    min(x)
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:35:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=min(x,y,z)
c=(x+y+z)-(a+b)
b=max(x,y,z)
print(a)
print(c)
print(b)

-- EXECUTION TIME:
0.146414
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 8, in <module>
    c=(x+y+z)-(a+b)
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:46:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
c=(x+y+z)-(a+b)
b=(max(x,y,z))
print(a)
print(c)
print(b)

-- EXECUTION TIME:
0.199284
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 8, in <module>
    c=(x+y+z)-(a+b)
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 23:46:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
x=int(input())
y=int(input())
z=int(input())
a=(min(x,y,z))
b=(max(x,y,z))
c=(x+z+y)-(a+b)
print(a)
print(c)
print(b)

-- EXECUTION TIME:
0.139877
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
